--- a/FrontEnd/smart-recruiter/src/app/candidate-personal-profile/candidate-personal-profile.component.html
+++ b/FrontEnd/smart-recruiter/src/app/candidate-personal-profile/candidate-personal-profile.component.html
@@ -47,7 +47,7 @@
                                 <div class="grid">
                                     <div class="col-12 mb-2 mt-0">
                                         <div class="name">
-                                            <h1 class="text-center">{{candidate.name}}</h1>
+                                            <h1 class="text-center mt-0">{{candidate.name}}</h1>
                                         </div>
                                         <div>
                                             <!-- fix the postion of a candidate replacement -->
