--- a/FrontEnd/smart-recruiter/src/app/user-opening/user-opening.component.html
+++ b/FrontEnd/smart-recruiter/src/app/user-opening/user-opening.component.html
@@ -5,7 +5,7 @@
         </div>
     </div>
     <div class="grid">        
-        <div class="col-12">
+        <div class="col-12" [style]="{'margin-top' : '55px'}">
             <div class="grid">
                 <div class="col-7 space">
                     <h2 class="m-0">Welcome to LB Finance</h2>
