--- a/FrontEnd/smart-recruiter/src/app/job-description/job-description.component.html
+++ b/FrontEnd/smart-recruiter/src/app/job-description/job-description.component.html
@@ -4,7 +4,7 @@
             <app-user-nav></app-user-nav>        
         </div>
     </div>
-    <div class="grid">
+    <div class="grid" [style]="{'margin-top' : '55px'}">
         <div class="col-11 mt-4 ml-8">
             <div class="grid full-space">
                 <div class="col-12" *ngIf = "isJobLoaded">
